<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="190dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/box_tittle"
    android:backgroundTint="@color/white"
    android:elevation="4dp"
    android:paddingVertical="20dp"
    android:paddingHorizontal="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/konhapus"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/hapus"
            android:textSize="12dp"
            android:id="@+id/tmbldelete"
            android:backgroundTint="@color/olive"
            android:onClick="aksi_klik_update"
            android:layout_marginLeft="1dp">
        </Button>

        <Button
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:text="@string/batal"
            android:textSize="12dp"
            android:id="@+id/tmblcancel"
            android:backgroundTint="@color/coklat_gelap"
            android:onClick="aksi_klik_update"
            android:layout_marginLeft="15dp">
        </Button>
    </LinearLayout>
</LinearLayout>