<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="290dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/box_tittle"
    android:backgroundTint="@color/white"
    android:elevation="4dp"
    android:paddingVertical="20dp"
    android:paddingHorizontal="18dp">
    <TextView
        android:id="@+id/judulPdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Judul Produk"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/alamatkirim"
            android:textSize="12dp"
            android:textColor="#989898" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="12dp"
            android:textColor="#989898"/>
        <TextView
            android:id="@+id/Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="asdasdsadasdasdasdadasda"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/beratpesanan"
            android:textSize="12dp"
            android:textColor="#989898" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="12dp"
            android:textColor="#989898"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/Berat"
            android:text="500gram"
            android:textSize="14dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/jumlahpesanan"
            android:textSize="12dp"
            android:textColor="#989898" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="12dp"
            android:textColor="#989898"/>
        <TextView
            android:id="@+id/Jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="asda"
            android:textSize="14dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/garis"
        android:backgroundTint="@color/black">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Rp5000000"
            android:textSize="14dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/beli"
            android:textSize="12dp"
            android:id="@+id/tmblbeli"
            android:backgroundTint="@color/olive"
            android:layout_marginLeft="1dp">
        </Button>

        <Button
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:text="@string/batal"
            android:textSize="12dp"
            android:id="@+id/tmblcancel"
            android:backgroundTint="@color/coklat_gelap"
            android:onClick="aksi_klik_update"
            android:layout_marginLeft="15dp">
        </Button>
    </LinearLayout>
</LinearLayout>