<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/toko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vitasampi"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"/>
        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/selengkapnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/aksi"
                android:textAlignment="textEnd"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selesai"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="10dp"/>
        </ViewFlipper>
    </LinearLayout>
    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/garis">
    </TextView>
    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/toDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/foto_produk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/vit_b1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/namaProduk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vitamin B-1"
                        android:textSize="18dp"
                        android:layout_marginRight="4dp"/>

                    <TextView
                        android:id="@+id/varianB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(1kg)"
                        android:textSize="18dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp15.000"
                    android:layout_marginTop="3dp"/>
            </LinearLayout>
            <Button
                android:visibility="gone"
                android:id="@+id/ubah"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                app:cornerRadius="0dp"
                android:text="@string/ubah"
                android:textAlignment="center"
                android:textSize="12dp"
                android:backgroundTint="@color/abu"
                android:layout_marginLeft="20dp"/>

            <Button
                android:visibility="gone"
                android:id="@+id/hapus"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                app:cornerRadius="0dp"
                android:text="@string/hapus"
                android:textAlignment="center"
                android:textSize="12dp"
                android:backgroundTint="@color/coklat_gelap"/>
            <Button
                android:visibility="gone"
                android:id="@+id/checkout"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                app:cornerRadius="0dp"
                android:text="@string/checkout"
                android:textAlignment="center"
                android:textSize="12dp"
                android:backgroundTint="@color/hijau"/>
        </LinearLayout>
    </HorizontalScrollView>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/blmkon"
        android:textColor="@color/abu"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="-68dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>