<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="393dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/box_tittle"
    android:backgroundTint="@color/white"
    android:elevation="4dp"
    android:paddingVertical="20dp"
    android:paddingHorizontal="18dp">
    <TextView
        android:id="@+id/judulP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Judul Produk"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/gambar_produk"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/vitasampi"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="2dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/alamatkirim"
                android:textSize="12dp"
                android:textColor="#989898" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="12dp"
                android:textColor="#989898"/>
            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="asdasdsadasdasdasdadasda"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:paddingHorizontal="2dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/jumlahpesanan"
                android:textSize="12dp"
                android:textColor="#989898" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="12dp"
                android:textColor="#989898"/>
            <EditText
                android:id="@+id/jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="asda"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <Button
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:text="@string/simpan"
                android:textSize="12dp"
                android:id="@+id/tmbleditsave"
                android:backgroundTint="@color/olive"
                android:layout_marginLeft="1dp">
            </Button>

            <Button
                android:layout_width="88dp"
                android:layout_height="45dp"
                android:text="@string/batal"
                android:textSize="12dp"
                android:id="@+id/tmbleditcancel"
                android:backgroundTint="@color/coklat_gelap"
                android:onClick="aksi_klik_update"
                android:layout_marginLeft="15dp">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>