<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faq"
    android:background="@drawable/profile_background">
    <ImageView
        android:layout_width="55px"
        android:layout_height="55px"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back_button"
        android:id="@+id/backButton"></ImageView>
    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/faq"
        android:layout_marginTop="40dp"
        android:id="@+id/logo_faq"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_faq"
        app:layout_constraintStart_toStartOf="parent"
        android:text="FAQ"
        android:gravity="center"
        android:fontFamily="@font/pbold"
        android:textSize="20sp"></TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_faq">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:outlineProvider="background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/logo_faq">

                <TextView
                    android:id="@+id/ques1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/pbold"
                    android:textSize="16dp"
                    android:onClick="toggleAnswerVisibility"
                    android:text="@string/q1_faq"></TextView>

                <TextView
                    android:id="@+id/ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/pregular"
                    android:text="@string/a1_faq"
                    android:visibility="gone"></TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:outlineProvider="background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardq1">

                <TextView
                    android:id="@+id/ques2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/pbold"
                    android:textSize="16dp"
                    android:onClick="toggleAnswerVisibility"
                    android:text="@string/q2_faq"></TextView>

                <TextView
                    android:id="@+id/ans2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/pregular"
                    android:text="@string/a2_faq"
                    android:visibility="gone"></TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:outlineProvider="background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardq2">

                <TextView
                    android:id="@+id/ques3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/pbold"
                    android:textSize="16dp"
                    android:onClick="toggleAnswerVisibility"
                    android:text="@string/q3_faq"></TextView>

                <TextView
                    android:id="@+id/ans3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/pregular"
                    android:text="@string/a3_faq"
                    android:visibility="gone"></TextView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>