<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".masukan"
    android:background="@drawable/profile_background">
    <ImageView
        android:layout_width="55px"
        android:layout_height="55px"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back_button"
        android:id="@+id/backButton"></ImageView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/masukan"
        android:layout_marginTop="50dp"
        android:id="@+id/logo_masukan"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_masukan"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/masukan"
        android:gravity="center"
        android:fontFamily="@font/pbold"
        android:layout_marginTop="7dp"
        android:textSize="20sp"></TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/logo_masukan"
        android:layout_marginTop="57dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/white"
        android:outlineProvider="background"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:id="@+id/cardmasukan"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="top"
            android:hint="@string/hintmasukan"
            android:fontFamily="@font/pregular"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:id="@+id/et_masukan"></EditText>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardmasukan"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/kirim"
        android:backgroundTint="@color/olive"
        android:id="@+id/btn_simpanmasukan"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>